--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <style>
+<html>
+<head>
+<style>
 h1{
 	font-family:Rancho;
 	text-align:center;
@@ -90,6 +93,11 @@ h1{
       0.28em 0.28em #8f00ff;
   }
 }
+</style>
+<body>
+<h1>Saute Fest London</h1>
+</body>
+</html
 </style>
 <body>
 <h1>Saute Fest London</h1>
