--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
 <head>
 <style>
-<html>
-<head>
 <style>
 h1{
 	font-family:Rancho;
@@ -97,9 +95,4 @@ h1{
 <body>
 <h1>Saute Fest London</h1>
 </body>
-</html
-</style>
-<body>
-<h1>Saute Fest London</h1>
-</body>
-</html
+</html>
