--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ h1{
 	text-align:center;
 	font-size:72px;
  -webkit-animation:rainbow 3s linear infinite;
+ color: rgba(0, 0, 0, 0);
 }
 
 @-webkit-keyframes rainbow {
