--- a/index.html
+++ b/index.html
@@ -1,98 +1,154 @@
 <html>
-<head>
-<style>
-h1{
-	font-family:Rancho;
-	text-align:center;
-	font-size:72px;
- -webkit-animation:rainbow 3s linear infinite;
- color: rgba(0, 0, 0, 0);
-}
 
-@-webkit-keyframes rainbow {
-  from {
-    text-shadow:
-      0.04em 0.04em #ff0000,
-      0.08em 0.08em #ff7f00,
-      0.12em 0.12em #ffff00,
-      0.16em 0.16em #00ff00,
-      0.20em 0.20em #0000ff,
-      0.24em 0.24em #4b0082,
-      0.28em 0.28em #8f00ff;
-  }
-  15% {
-    text-shadow:
-      0.04em 0.04em #8f00ff,
-      0.08em 0.08em #ff0000,
-      0.12em 0.12em #ff7f00,
-      0.16em 0.16em #ffff00,
-      0.20em 0.20em #00ff00,
-      0.24em 0.24em #0000ff,
-      0.28em 0.28em #4b0082;
-  }
-  30% {
-    text-shadow:
-      0.04em 0.04em #4b0082,
-      0.08em 0.08em #8f00ff,
-      0.12em 0.12em #ff0000,
-      0.16em 0.16em #ff7f00,
-      0.20em 0.20em #ffff00,
-      0.24em 0.24em #00ff00,
-      0.28em 0.28em #0000ff;
-  }
-  45% {
-    text-shadow:
-      0.04em 0.04em #0000ff,
-      0.08em 0.08em #4b0082,
-      0.12em 0.12em #8f00ff,
-      0.16em 0.16em #ff0000,
-      0.20em 0.20em #ff7f00,
-      0.24em 0.24em #ffff00,
-      0.28em 0.28em #00ff00;
-  }
-  60% {
-    text-shadow:
-      0.04em 0.04em #00ff00,
-      0.08em 0.08em #0000ff,
-      0.12em 0.12em #4b0082,
-      0.16em 0.16em #8f00ff,
-      0.20em 0.20em #ff0000,
-      0.24em 0.24em #ff7f00,
-      0.28em 0.28em #ffff00;
-  }
-  75% {
-    text-shadow:
-      0.04em 0.04em #ffff00,
-      0.08em 0.08em #00ff00,
-      0.12em 0.12em #0000ff,
-      0.16em 0.16em #4b0082,
-      0.20em 0.20em #8f00ff,
-      0.24em 0.24em #ff0000,
-      0.28em 0.28em #ff7f00;
-  }
-  90% {
-    text-shadow:
-      0.04em 0.04em #ff7f00,
-      0.08em 0.08em #ffff00,
-      0.12em 0.12em #00ff00,
-      0.16em 0.16em #0000ff,
-      0.20em 0.20em #4b0082,
-      0.24em 0.24em #8f00ff,
-      0.28em 0.28em #ff0000;
-  }
-  to {
-    text-shadow:
-      0.04em 0.04em #ff0000,
-      0.08em 0.08em #ff7f00,
-      0.12em 0.12em #ffff00,
-      0.16em 0.16em #00ff00,
-      0.20em 0.20em #0000ff,
-      0.24em 0.24em #4b0082,
-      0.28em 0.28em #8f00ff;
-  }
-}
-</style>
+<head>
+    <style>
+        .rainbow {
+            font-family: Rancho;
+            text-align: center;
+            font-size: 72px;
+            -webkit-animation: rainbow 2s linear infinite;
+            color: rgba(255, 255, 255);
+        }
+        .rainbow1 {
+            font-family: Rancho;
+            position: relative;
+            text-align: center;
+            font-size: 72px;
+            -webkit-animation: rainbow 2s linear infinite;
+            color: rgba(255, 255, 255);
+        }
+
+        @-webkit-keyframes rainbow {
+            from {
+                text-shadow:
+                    0.04em 0.04em #ff0000,
+                    0.08em 0.08em #ff7f00,
+                    0.12em 0.12em #ffff00,
+                    0.16em 0.16em #00ff00,
+                    0.20em 0.20em #0000ff,
+                    0.24em 0.24em #4b0082,
+                    0.28em 0.28em #8f00ff;
+            }
+
+            15% {
+                text-shadow:
+                    0.04em 0.04em #8f00ff,
+                    0.08em 0.08em #ff0000,
+                    0.12em 0.12em #ff7f00,
+                    0.16em 0.16em #ffff00,
+                    0.20em 0.20em #00ff00,
+                    0.24em 0.24em #0000ff,
+                    0.28em 0.28em #4b0082;
+            }
+
+            30% {
+                text-shadow:
+                    0.04em 0.04em #4b0082,
+                    0.08em 0.08em #8f00ff,
+                    0.12em 0.12em #ff0000,
+                    0.16em 0.16em #ff7f00,
+                    0.20em 0.20em #ffff00,
+                    0.24em 0.24em #00ff00,
+                    0.28em 0.28em #0000ff;
+            }
+
+            45% {
+                text-shadow:
+                    0.04em 0.04em #0000ff,
+                    0.08em 0.08em #4b0082,
+                    0.12em 0.12em #8f00ff,
+                    0.16em 0.16em #ff0000,
+                    0.20em 0.20em #ff7f00,
+                    0.24em 0.24em #ffff00,
+                    0.28em 0.28em #00ff00;
+            }
+
+            60% {
+                text-shadow:
+                    0.04em 0.04em #00ff00,
+                    0.08em 0.08em #0000ff,
+                    0.12em 0.12em #4b0082,
+                    0.16em 0.16em #8f00ff,
+                    0.20em 0.20em #ff0000,
+                    0.24em 0.24em #ff7f00,
+                    0.28em 0.28em #ffff00;
+            }
+
+            75% {
+                text-shadow:
+                    0.04em 0.04em #ffff00,
+                    0.08em 0.08em #00ff00,
+                    0.12em 0.12em #0000ff,
+                    0.16em 0.16em #4b0082,
+                    0.20em 0.20em #8f00ff,
+                    0.24em 0.24em #ff0000,
+                    0.28em 0.28em #ff7f00;
+            }
+
+            90% {
+                text-shadow:
+                    0.04em 0.04em #ff7f00,
+                    0.08em 0.08em #ffff00,
+                    0.12em 0.12em #00ff00,
+                    0.16em 0.16em #0000ff,
+                    0.20em 0.20em #4b0082,
+                    0.24em 0.24em #8f00ff,
+                    0.28em 0.28em #ff0000;
+            }
+
+            to {
+                text-shadow:
+                    0.04em 0.04em #ff0000,
+                    0.08em 0.08em #ff7f00,
+                    0.12em 0.12em #ffff00,
+                    0.16em 0.16em #00ff00,
+                    0.20em 0.20em #0000ff,
+                    0.24em 0.24em #4b0082,
+                    0.28em 0.28em #8f00ff;
+            }
+        }
+
+        .date {
+            text-align: center;
+            font-size: 40px;
+
+        }
+        body {
+            background: black;
+        }
+
+        .testi {
+            width: 27%;
+            height: 100%;
+            background: #ff0000;
+            position: absolute;
+        }
+
+        .testi1 {
+            position:absolute;
+            right:0%;
+            height:100%;
+            width:27%;
+            background: #00ff00
+        }
+        .testi2 {
+            position:absolute;
+            bottom:0%;
+            height:27%;
+            left:27%;
+            width:46%;
+            height:35%;
+            background: #0000ff;
+            z-index: -1;
+        }
+    </style>
+
 <body>
-<h1>Saute Fest London</h1>
+    <div class="testi"><h1 class="rainbow1">Testimonials</h1></div>
+    <div class="testi1"><h1 class="rainbow1">Tickets</h1></div>
+    <div class="testi2"><h1 class="rainbow1">Social Media</h1></div>
+    <h1 class="rainbow">Saute Fest London</h1>
+    <p class="rainbow"><em>12/26-12/29</em></p>
 </body>
+
 </html>
