--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             left:27%;
             width:46%;
             height:35%;
-            background: #0000ff;
+            background: #0000f0;
             z-index: -1;
         }
     </style>
