--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="testi"><h1 class="rainbow1">Testimonials: <br> From People Just Like You</h1></div>
     <div class="testi1"><h1 class="rainbow1">Tickets: <br> On Sale Now</h1></div>
     <div class="testi2"><h1 class="rainbow1">Social Media: <br> Follow Us On These Sites</h1></div>
-    <div class="testi3"><h1 class="rainbow1">Aout: <br> Learn More Aboute Saute Fest And Its Staff</h1></div>
+    <div class="testi3"><h1 class="rainbow1">About: <br> Learn More Aboute Saute Fest And Its Staff</h1></div>
     <h1 class="rainbow">Saute Fest London</h1>
     <p class="rainbow"><em>12/26-12/29</em></p>
 </body>
