--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Rancho;
             position: relative;
             text-align: center;
-            font-size: 72px;
+            font-size: 20%;
             -webkit-animation: rainbow 2s linear infinite;
             color: rgba(255, 255, 255);
         }
