--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         .rainbow {
             font-family: Rancho;
             text-align: center;
-            font-size: 72px;
+            font-size: 80%;
             -webkit-animation: rainbow 2s linear infinite;
             color: rgba(255, 255, 255);
         }
