--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         .rainbow {
             font-family: Rancho;
             text-align: center;
-            font-size: 400%;
+            font-size: 350%;
             -webkit-animation: rainbow 2s linear infinite;
             color: rgba(255, 255, 255);
         }
@@ -159,7 +159,7 @@
     <div class="testi1"><h1 class="rainbow1">Tickets: <br> On Sale Now</h1></div>
     <div class="testi2"><h1 class="rainbow1">Social Media: <br> Follow Us On These Sites</h1></div>
     <div class="testi3"><h1 class="rainbow1">About: <br> Learn More Aboute Saute Fest And Its Staff</h1></div>
-    <h1 class="rainbow">Saute Fest London</h1>
+    <h1 class="rainbow">Saute Fest <br> London</h1>
     <p class="rainbow"><em>12/26-12/29</em></p>
 </body>
 
