--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </style>
 
 <body>
-    <div class="testi"><h1 class="rainbow1">Testimonialrs: <br> From People Just Like You</h1></div>
+    <div class="testi"><h1 class="rainbow1">Testimony: <br> From People Just Like You</h1></div>
     <div class="testi1"><h1 class="rainbow1">Tickets: <br> On Sale Now</h1></div>
     <div class="testi2"><h1 class="rainbow1">Social Media: <br> Follow Us On These Sites</h1></div>
     <div class="testi3"><h1 class="rainbow1">About: <br> Learn More Aboute Saute Fest And Its Staff</h1></div>
