--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             text-align: center;
             font-size: 300%;
             -webkit-animation: rainbow 2s linear infinite;
-            color: rgba(255, 255, 255);
+            color: rgba(255, 255, 255, 0);
         }
 
         @-webkit-keyframes rainbow {
